<resources>
    <string name="app_name">Youtube_Api</string>
    <string name="thumbnail">thumbnail</string>
    <string name="channel_logo">channel_logo</string>
    <string name="dot">·</string>
    <string name="input_search_keyword">Input Search Keyword</string>
    <string name="search">search</string>
    <string name="description">설명</string>

    <!-- fragment -->
    <string name="fragment_my_title">My</string>
    <string name="fragment_trend_title">Trend</string>
    <string name="fragment_search_title">Search</string>
    <string name="fragment_setting_title">Setting</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="more">more</string>
    <string name="video_thumbnail">video_thumbnail</string>
    <string name="middle_dot">·</string>
</resources>