<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_trend_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="12dp">

    <ImageView
        android:id="@+id/iv_video_thumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/video_thumbnail"
        app:layout_constraintDimensionRatio="H,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_video_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:ellipsize="end"
        android:lines="1"
        android:paddingHorizontal="2dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_video_thumbnail"
        app:layout_constraintEnd_toEndOf="@id/iv_video_thumbnail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_video_thumbnail">

        <ImageView
            android:id="@+id/iv_channel_logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/channel_logo"
            android:layout_marginEnd="8dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_video_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text=""
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_video_channel_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text=""
                    android:textColor="@color/color_youtube_sub_title"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/middle_dot"
                    android:textColor="@color/color_youtube_sub_title"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_video_view_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text=""
                    android:textColor="@color/color_youtube_sub_title"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/middle_dot"
                    android:textColor="@color/color_youtube_sub_title"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_video_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text=""
                    android:textColor="@color/color_youtube_sub_title"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_more_vert_24"
            android:contentDescription="@string/more" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>